correção de arquivos

--- a/Exceptions/ResourceMenssagensErro.en.resx
+++ b/Exceptions/ResourceMenssagensErro.en.resx
@@ -132,6 +132,9 @@
   <data name="DELETE_USER" xml:space="preserve">
     <value>Error deleting user !</value>
   </data>
+  <data name="DOCUMENTO_INVALIDO" xml:space="preserve">
+    <value>Document Number is invalid!</value>
+  </data>
   <data name="EMAIL_CADASTRADO" xml:space="preserve">
     <value>This e-mail already exists in the database!</value>
   </data>
