--- a/Exceptions/ResourceMenssagensErro.resx
+++ b/Exceptions/ResourceMenssagensErro.resx
@@ -132,6 +132,9 @@
   <data name="DELETE_USER" xml:space="preserve">
     <value>Erro ao deletar o usuário !</value>
   </data>
+  <data name="DOCUMENTO_INVALIDO" xml:space="preserve">
+    <value>Número do Documento está invalido!</value>
+  </data>
   <data name="EMAIL_CADASTRADO" xml:space="preserve">
     <value>Esse e-mail já existe na base de Dados!</value>
   </data>
